# spotify-history

./: Cargo.toml
migrations/: plays.sql
src/: main.rs
