[package]
name = "json-to-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }